--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
 <head>
-    <meta charset="UTF-8">
-    <title>MinesweeperJS</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MinesweeperJS</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="p5/p5.js"></script>
+  <!-- <script src="../addons/p5.sound.js"></script> -->
+  <script src="minesweeper.js"></script>
 </head>
+
 <body>
-    <div id="game">
-        <div id="character"></div>
-        <div id="block"></div>
-    </div>
-<script src="script.js"></script>
+  <main>
+  </main>
 </body>
 </html>
