added flags, fixed slow down with recursive clearing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-  <main>
-  </main>
+  <p>MinesweeperJS</p>
+  <div id="minesweeperjs"></div>
+  <p>Left Click to Clear, Ctrl+Click to Flag</p>
 </body>
 </html>
