prep for initial deployment

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MinesweeperJS</title>
   <link rel="stylesheet" href="style.css">
-  <script src="p5/p5.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
   <!-- <script src="../addons/p5.sound.js"></script> -->
   <script src="minesweeper.js"></script>
 </head>
