--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MinesweeperJS</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-  <!-- <script src="../addons/p5.sound.js"></script> -->
   <script src="minesweeper.js"></script>
 </head>
 
 <body>
   <p>MinesweeperJS</p>
   <div id="minesweeperjs"></div>
-  <p>Left Click to Clear, Ctrl+Click to Flag</p>
+  <div id="input">
+    <form>
+      <label for="numMines">Mines:</label>
+      <input type="number" id="numMines" name="numMines" value="40">
+      <label for="tilesX">X:</label>
+      <input type="number" id="tilesX" name="tilesX" value="16">
+      <label for="tilesY">Y:</label>
+      <input type="number" id="tilesY" name="tilesY" value="16">
+      <button onclick="create()">Start</button>
+    </form>
+  </div>
 </body>
 </html>
