--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+  <h1>Welcome to this super awesome site</h1>
+  <p>This site is amazing</p>s
+  
   <p>MinesweeperJS</p>
   <div id="minesweeperjs"></div>
   <div id="input">
@@ -20,8 +23,8 @@
       <input type="number" id="tilesX" name="tilesX" value="16">
       <label for="tilesY">Y:</label>
       <input type="number" id="tilesY" name="tilesY" value="16">
-      <button onclick="create()">Start</button>
     </form>
+    <button onclick="create()">Start</button>
   </div>
 </body>
 </html>
